src/App.css
:root {
  --clr-primary-300: rgb(49, 47, 47);

  --ff-primary: "Roboto", sans-serif;

  margin: 0;
  padding: 0;
  font-family: "Helvetica", "Arial", sans-serif;
  line-height: 1.5;
}


.App {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

header {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
  color: #212529;
}

img {
  display: block;
  max-width: 100%;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
}

.flex-container input {
  margin-bottom: 10px;
}

.flex-container button {
  margin-top: 10px;
}

.container {
  margin-inline: auto;
  width: min(90%, 70.5rem);
  padding-top: 10px;
  padding-bottom: 10px;}

.logo {
  text-decoration: none;
  font-size: 25px;
  color: inherit;
  margin-right: 20px;
  width: 300px;
}

.nav-area {
  display: flex; 
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
  padding: 10px 20px;
}

.menus {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  list-style: none;
}

.menu-items {
  position: relative;
  font-size: 14px;
  padding: 10px 20px;
}

.menu-items a {
  display: block;
  font-size: inherit;
  color: inherit;
  text-decoration: none;
}


.menu-items button {
  background-color: transparent;
  border: none;
  display: flex;
  align-items: center;
  color: inherit;
  font-size: inherit;
  cursor: pointer;
  width: 100%;
}

.menu-items button:hover{
  background-color: #f2f2f2;
}

.arrow::after {
  content: "";
  display: inline-block;
  margin-left: 0.28em;
  vertical-align: 0.09em;
  border-top: 0.42em solid;
  border-right: 0.32em solid transparent;
  border-left: 0.32em solid transparent;
}

.dropdown {
  position: absolute;
  right: 0;
  left: auto;
  box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
    0 4px 6px -2px rgba(71, 63, 79, 0.16);
  font-size: 0.875rem;
  z-index: 9999;
  min-width: 10rem;
  padding: 0.5rem 0;
  list-style: none;
  background-color: #fff;
  border-radius: 0.5rem;
 display: none;
}

.dropdown.show {
  display: block;
}

.dropdown .dropdown-submenu {
  position: absolute;
  left: 100%;
  top: -7px;
}

.content {
  max-width: 1200px;
  margin: 0 auto;
  padding: 3rem 20px;
}

.content1 {
  max-width: 1200px;
  margin-left: 10rem;
  padding: 10pxrem 20px;
}

.hero-text {
  text-align: center;
  padding-top: 100px;
  color: white;
}

.bg-dark {
  background-color: var(--clr-primary-300);
  color: white;
}

.bg-plain {
  
  color: black;
}


.menu-list {

  padding-left: 1.5rem;
  padding-right: 1.5rem;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  max-width: 60rem;
 
}


.split { 
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}


.split_menu { 
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}


.split_time { 
  display: flex;
  flex-direction: row;
  justify-content: left;
  align-items: baseline;
 
}

.box {
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center
}

.box1 {
  display: flex;
  align-items: center;
  justify-content: center
}


.flex-item-left {
  background-color: white;
  padding: 10px 100px 0px 150px; 
  flex: 20%;
  height: 550px;
  line-height: 30px;
 }

.flex-item-right {
  background-color: white;
  padding: 20px;
  flex: 80%;
  height: 550px;
  text-align: left;
}

.image {
  flex-basis: 70%;

}
.text {
  font-size: 18px;
  padding-left: 20px;
}


.home-nav-links{
  color: black;
  text-decoration: none;
    
}

.home-nav-links:hover{
  color: palevioletred;
    
}

.btn {
  background-color: palevioletred;
  color: white;
  font-size: 18px;
  cursor: pointer;
  border-style: none;
  height: 35px;
  }


.btn:hover {
  background-color: palevioletred;
  color: white;

}

.btn:disabled {
  cursor: default;
  opacity: 0.7;
}

.ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;  
}

.li {
  float: left;
  /*display: block;*/
  padding: 15px;
  /*background-color: #a4cfe7;*/
}

.li:hover {
  cursor: pointer;
  color: palevioletred;
}


.menu-list__special {
  padding: .05rem;
  color: #fff;
  background: #f8967e;
}

.label_block {
  display: block;
  margin-top: 20px;
  }

.label_colon {
  margin-left: 10px;
  margin-right: 10px;
}


/*span {
    display: block;
    overflow: hidden;
    padding: 0px 4px 0px 6px;
}*/

/*
a {
  text-decoration: none;
}

a:link { text-decoration: none;
color: inherit; }

a:visited { text-decoration: none; }

a:hover { text-decoration: none; 
  color: peachpuff;
}

.a:active { text-decoration: none; }

*/

@media (min-width: 50em) {
  .split {
      flex-direction: row;
  }

  .split > * {
      flex-basis: 100%;
  }

  .split > * + * {
      margin-left: 2rem;
  }

}

